--- a/css/estilocasa.css
+++ b/css/estilocasa.css
@@ -1,8 +1,10 @@
 html
 {
-    background: url(//imagen/tecnologia.jpg);
+    background-image: url(/imagen/tecnologia.jpg);
     background-size: cover;
-    height: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
     margin-top: 0px;
     margin-left: 0px;
 }
