--- a/css/estilo.css
+++ b/css/estilo.css
@@ -52,7 +52,7 @@ body
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 26px;
-    padding-left: 40px;
+    padding-left: 10px;
     padding-right: 30px;
     padding-top:5vh;
     padding-bottom:2.8vh;
@@ -151,8 +151,186 @@ p
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     color: whitesmoke;
-    margin-top: 70px;       
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 0px;       
+    padding-top: 40px;
+    padding-bottom: 30px;
     background-color: black;
+}
+
+/*Estilos para la pagina de autor*/
+.back-imag
+{
+    
+    background-image: url(../imagen/chesi.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    height: 390px;
+    width: 350px;
+    
+}
+.image-left{
+    
+    padding-right: 25%;
+    border-right: 0px dashed black;
+    
+}
+
+.aleft{
+    float: left;
+}
+
+.label-text{
+    
+    
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: justify;
+    color: burlywood;
+    
+}
+.input-text{
+    font-size: 20px;
+    margin-top: 20px;
+    width: 220px;
+    height: 30px;
+    border: 0.5px solid turquoise;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    position: relative;
+    
+
+}
+#textarea
+{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 10px;
+}
+#piea
+{
+width:100vw;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    color: whitesmoke;
+    margin-top: 110px;       
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background-color: black;
+}
+/*estilos para la pagina contactos*/
+
+.Cback-imag
+{
+    
+    background-image: url(../imagen/chesi.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-top: 50px;
+    height: 390px;
+    width: 350px;
+    
+}
+.Cimage-left{
+    
+    padding-right: 25%;
+    border-right: 0px dashed black;
+    
+}
+
+.Cleft{
+    float: left;
+}
+
+.textoetiqueta{
+    
+    
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: justify;
+    color: burlywood;
+    
+}
+.Textocaja{
+    font-size: 20px;
+    margin-top: 20px;
+    width: 220px;
+    height: 30px;
+    border: 0.5px solid turquoise;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    position: relative;
+    
+
+}
+#area
+{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 10px;
+}
+#tituloinfo
+{
+    padding-top:10px;
+    padding-left: 0px;
+    right: 70px;
+    color: black;
+    position: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+}
+#piec
+{
+    width:100vw;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    color: whitesmoke;
+    margin-top: 180px;       
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background-color: black;
+}
+/*Para pagina productos*/
+#contenedorProducto
+{
+    clear:right;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 70px;
+}
+
+.descripcionproducto
+{
+    display: inline-block;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 3.5vw;
+    margin-right: 3.5vw;
+    text-align: center;
+    width: 25vw;
+    color: whitesmoke;
+    padding-bottom: 15px;
+}
+
+.descripcionproductoimagen
+{
+    border-top-right-radius: 10%;
+    height: 150px;
+    width: 250px;
+    
+}
+
+.subtituloproducto
+{
+    margin-left: 35px;
+    margin-top:10px;
+    margin-bottom:18px;
+    color: whitesmoke;
+    font-size: 15px;
+    text-align:left;
+}
+#color
+{
+    background-color: darkcyan;
+    
 }
